[project]
name = "pybitcask"
version = "0.1.0"
description = "A Python implementation of the Bitcask storage engine"
authors = [
    { name = "Ashish Gaonker", email = "ashish.gec@gmail.com" }
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
benchmark = [
    "lmdb>=1.4.1",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
    "psutil>=5.9.0",
    "tabulate>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v" 
